kube/apps/homeassistant/hass/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hass-gateway
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-acme-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      hostname: "hass.kube.metalnet.org"
      port: 8443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: hass-kube-metalnet-org-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-http-route
  namespace: homeassistant
spec:
  parentRefs:
    - name: hass-gateway
      namespace: homeassistant
      sectionName: websecure
  hostnames:
    - "hass.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: hass-home-assistant
          port: 8080
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
